--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,57 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap");
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-/* font-family: 'Oswald', sans-serif;
-font-family: 'Playfair Display', serif;
-font-family: 'Poppins', sans-serif; */
 
-/*navbar*/
-.navbar{
-  font-family:  'Poppins', sans-serif;
+/* font-family: 'Poppins', sans-serif; */
+/* font-family: 'Playfair Display', serif; */
+
+/* //navbar css */
+.navbar {
+  font-family: "Poppins", sans-serif;
   font-size: 17px;
   line-height: 26px;
   text-transform: uppercase;
   box-shadow: 0 8px 6px -6px gray;
-  --webkit-box-shadow:0 8px 6px -6px gray;
-  border-bottom: 0.3px solid gray !important;
+  --webkit-box-shadow: 0 8px 6px -6px gray;
+  border-bottom: solid gray !important;
 }
-.nav-link{
+
+.nav-link {
   font-weight: 300 !important;
 }
-.active{
+
+.active {
   border-bottom: 2px solid black;
 }
-.navbar-brand{
+
+.navbar-brand {
   font-weight: 700;
-    font-family: "roboto", sans-serif;
-    letter-spacing: 3px;
+  font-family: "roboto", sans-serif;
+  letter-spacing: 3px;
 }
-.footer{
-  padding: 25px ;
+
+.search-form {
+  margin-right: 10px;
+  margin-top: 4px;
+}
+.search-form input {
+  border: none;
+  border-radius: 0;
+}
+.search-form button {
+  background-color: #000000;
+  border-radius: 0;
   color: white;
-  background: black;
+}
+
+/* =============================
+==========footer============= */
+
+.footer {
+  color: white;
+  padding: 25px;
+  background: #000000; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
     #434343,
     #000000
-  );
-background: linear-gradient( to right,
-#434343,
-#000000);
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000);
 }
-.footer a{
+
+.footer a {
   text-decoration: none;
   color: white;
   padding: 10px;
-  
 }
-.footer a:hover{
+
+.footer a:hover {
   color: #ffefba;
-  border: 1px solid ffefba;
+  border-bottom: 1px solid #ffefba;
 }
+/* =================================
+======== page not found css ======= */
 .pnf {
   display: flex;
   min-height: 65vh;
@@ -59,10 +82,12 @@ background: linear-gradient( to right,
   align-items: center;
   justify-content: center;
 }
+
 .pnf-title {
   font-size: 100px;
   font-weight: 700;
 }
+
 .pnf-heading {
   font-weight: normal;
 }
@@ -78,6 +103,8 @@ background: linear-gradient( to right,
   background-color: black;
   color: white;
 }
+/* ========================================= */
+/* =========contact us ========= */
 .contactus {
   margin: 0;
   padding: 0;
@@ -87,16 +114,6 @@ background: linear-gradient( to right,
   justify-content: center;
 }
 
-.register{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40vh;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
- 
-}
 /* ==================== */
 .product-link {
   text-decoration: none !important;
